usr/src/uts/i86pc/io/pcplusmp/apic_common.c
@@ -386,10 +386,10 @@ apic_cmci_setup(processorid_t cpuid, boolean_t enable)
 	CPUSET_ONLY(cpu_set, cpuid);
 
 	if (enable) {
-		xc_call(NULL, NULL, NULL, CPUSET2BV(cpu_set),
+		xc_call(0, 0, 0, CPUSET2BV(cpu_set),
 		    (xc_func_t)apic_cmci_enable);
 	} else {
-		xc_call(NULL, NULL, NULL, CPUSET2BV(cpu_set),
+		xc_call(0, 0, 0, CPUSET2BV(cpu_set),
 		    (xc_func_t)apic_cmci_disable);
 	}
 }
